# autonomous-miniature-vehicle-development-visual-localization-stage

./: README.md  checkpoints.json  ekf.yaml
firmware/encoder_rpm/: encoder_rpm.ino
install/: local_setup.sh  setup.sh
install/bno055/share/bno055/: package.sh
install/carrinho_base/lib/carrinho_base/: checkpoint_player  checkpoint_recorder  motor_control
install/carrinho_base/share/carrinho_base/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/controlegeral_carrinho/share/controlegeral_carrinho/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/detector/lib/detector/: apriltags
install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.2  libmicroxrcedds_agent.so.2.4.3
log/: latest_build
src/: telemetria_total.yaml  view_experiment.ipynb
src/carrinho_base/: package.xml  setup.cfg  setup.py
src/carrinho_base/carrinho_base/: checkpoint_player.py  checkpoint_recorder.py
src/computervision/: calibration.yaml
src/computervision/aruco/: import cv2.py
src/controlegeral_carrinho/: package.xml  setup.cfg  setup.py
src/controlegeral_carrinho/config/: ekf.yaml
src/controlegeral_carrinho/launch/: localization.launch.py
src/detector/: package.xml  setup.py
src/detector/detector/: apriltags.py
src/lidar_teste/: package.xml  setup.cfg  setup.py
src/lidar_teste/lidar_teste/: save_lidar.py
src/lidar_teste/records/: plot.py  scans.yaml  view_lidar.ipynb
src/microros_ws/install/: local_setup.sh  setup.sh
src/microros_ws/log/: latest_build
src/servo_steering/: setup.cfg  setup.py
(+272 files in other folders)
