<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>controlegeral_carrinho</name>
  <version>0.0.1</version>
  <description>Launch e configurações do carrinho</description>
  <maintainer email="seu@email.com">Seu Nome</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>sllidar_ros2</exec_depend>
  <exec_depend>bno055</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>